# SciFraudScan

./: .gitignore  README.md  pyproject.toml
examples/: p_values.csv  reported_stats.csv  suspicious_dataset.csv
src/research_integrity_screen/: __init__.py  cli.py  inference.py  models.py  pipeline.py  reporting.py  utils.py  web.py
src/research_integrity_screen/detectors/: __init__.py  authenticity.py  covariance.py  duplication.py  pvalues.py  randomization.py  reported_stats.py  structure.py  timeseries.py
tests/: test_detectors.py  test_inference.py  test_reporting_web.py
